MiniCParser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     functionDeclaration -> typeSpec ID LPAREN parameters RPAREN compoundStatement
Rule 2     compoundStatement -> LCURLY optionalLocalDeclarations optionalStatementList RCURLY
Rule 3     optionalStatementList -> statementList
Rule 4     optionalStatementList -> empty
Rule 5     empty -> <empty>
Rule 6     optionalLocalDeclarations -> localDeclarations
Rule 7     optionalLocalDeclarations -> empty
Rule 8     parameters -> parameterList
Rule 9     parameters -> VOID
Rule 10    program -> declarationList
Rule 11    statementList -> statementList statement
Rule 12    statementList -> statement
Rule 13    statement -> expressionStatement
Rule 14    statement -> compoundStatement
Rule 15    statement -> ifStatement
Rule 16    statement -> whileStatement
Rule 17    statement -> forStatement
Rule 18    statement -> returnStatement
Rule 19    statement -> breakStatement
Rule 20    statement -> continueStatement
Rule 21    expressionStatement -> expression SEMICOLON
Rule 22    expressionStatement -> SEMICOLON
Rule 23    expression -> expression DOT ID
Rule 24    expression -> expression LEFTARROW ID
Rule 25    expression -> ADDR expression
Rule 26    expression -> TIMES expression
Rule 27    expression -> expression LSQUARE expression RSQUARE
Rule 28    expression -> expression SINGLEEQUAL expression
Rule 29    expression -> ID LPAREN argumentExpressionList RPAREN
Rule 30    expression -> ID LPAREN RPAREN
Rule 31    argumentExpressionList -> argumentExpressionList COMMA expression
Rule 32    argumentExpressionList -> expression
Rule 33    expression -> expression DIVIDEEQUAL expression
Rule 34    expression -> expression PLUSEQUAL expression
Rule 35    expression -> expression MINUSEQUAL expression
Rule 36    expression -> expression TIMESEQUAL expression
Rule 37    expression -> expression DOUBLEPLUS
Rule 38    expression -> expression DOUBLEMINUS
Rule 39    expression -> expression PLUS expression
Rule 40    expression -> expression MINUS expression
Rule 41    expression -> expression TIMES expression
Rule 42    expression -> expression DIVIDE expression
Rule 43    expression -> expression DOUBLEPIPES expression
Rule 44    expression -> expression DOUBLEAMPERSAND expression
Rule 45    expression -> expression LANGLE expression
Rule 46    expression -> expression RANGLE expression
Rule 47    expression -> expression LANGLEEQUAL expression
Rule 48    expression -> expression RANGLEEQUAL expression
Rule 49    expression -> expression BANGEQUAL expression
Rule 50    expression -> expression DOUBLEEQUAL expression
Rule 51    expression -> expression PERCENT expression
Rule 52    expression -> INTLITERAL
Rule 53    expression -> FLOATLITERAL
Rule 54    expression -> ID
Rule 55    expression -> LPAREN expression RPAREN
Rule 56    expression -> MINUS expression
Rule 57    expression -> EXCLAMATION expression
Rule 58    declarationList -> declarationList declaration
Rule 59    declarationList -> declaration
Rule 60    declaration -> staticVariableDeclaration
Rule 61    declaration -> functionDeclaration
Rule 62    staticVariableDeclarationList -> staticVariableDeclarationList staticVariableDeclaration
Rule 63    staticVariableDeclarationList -> staticVariableDeclaration
Rule 64    forStatement -> FOR LPAREN optionalExpression SEMICOLON optionalExpression SEMICOLON optionalExpression RPAREN statement
Rule 65    optionalExpression -> expression
Rule 66    optionalExpression -> empty
Rule 67    continueStatement -> CONTINUE SEMICOLON
Rule 68    typeSpec -> VOID
Rule 69    typeSpec -> INT
Rule 70    typeSpec -> FLOAT
Rule 71    typeSpec -> CHAR
Rule 72    typeSpec -> structSpecifier
Rule 73    structSpecifier -> STRUCT ID LCURLY staticVariableDeclarationList RCURLY
Rule 74    structSpecifier -> STRUCT ID
Rule 75    staticVariableDeclaration -> typeSpec declaratorList SEMICOLON
Rule 76    staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON
Rule 77    declaratorList -> declaratorList COMMA declarator
Rule 78    declaratorList -> declarator
Rule 79    declarator -> pointer ID
Rule 80    declarator -> ID
Rule 81    pointer -> TIMES
Rule 82    pointer -> TIMES pointer
Rule 83    parameter -> typeSpec ID
Rule 84    parameterList -> parameterList COMMA parameter
Rule 85    parameterList -> parameter
Rule 86    whileStatement -> WHILE LPAREN expression RPAREN statement
Rule 87    localDeclarations -> localDeclarations localDeclaration
Rule 88    localDeclarations -> localDeclaration
Rule 89    localDeclaration -> staticVariableDeclaration
Rule 90    optionalElseStatement -> ELSE statement
Rule 91    optionalElseStatement -> empty
Rule 92    ifStatement -> IF LPAREN expression RPAREN statement optionalElseStatement
Rule 93    returnStatement -> RETURN expression SEMICOLON
Rule 94    breakStatement -> BREAK SEMICOLON

Terminals, with rules where they appear

ADDR                 : 25
BANGEQUAL            : 49
BREAK                : 94
CHAR                 : 71
COMMA                : 31 77 84
CONTINUE             : 67
DIVIDE               : 42
DIVIDEEQUAL          : 33
DOT                  : 23
DOUBLEAMPERSAND      : 44
DOUBLEEQUAL          : 50
DOUBLEMINUS          : 38
DOUBLEPIPES          : 43
DOUBLEPLUS           : 37
ELSE                 : 90
EXCLAMATION          : 57
FLOAT                : 70
FLOATLITERAL         : 53
FOR                  : 64
ID                   : 1 23 24 29 30 54 73 74 79 80 83
IF                   : 92
INT                  : 69
INTLITERAL           : 52 76
LANGLE               : 45
LANGLEEQUAL          : 47
LCURLY               : 2 73
LEFTARROW            : 24
LPAREN               : 1 29 30 55 64 86 92
LSQUARE              : 27 76
MINUS                : 40 56
MINUSEQUAL           : 35
PERCENT              : 51
PLUS                 : 39
PLUSEQUAL            : 34
RANGLE               : 46
RANGLEEQUAL          : 48
RCURLY               : 2 73
RETURN               : 93
RPAREN               : 1 29 30 55 64 86 92
RSQUARE              : 27 76
SEMICOLON            : 21 22 64 64 67 75 76 93 94
SINGLEEQUAL          : 28
STRUCT               : 73 74
TIMES                : 26 41 81 82
TIMESEQUAL           : 36
VOID                 : 9 68
WHILE                : 86
error                : 

Nonterminals, with rules where they appear

argumentExpressionList : 29 31
breakStatement       : 19
compoundStatement    : 1 14
continueStatement    : 20
declaration          : 58 59
declarationList      : 10 58
declarator           : 76 77 78
declaratorList       : 75 77
empty                : 4 7 66 91
expression           : 21 23 24 25 26 27 27 28 28 31 32 33 33 34 34 35 35 36 36 37 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 55 56 57 65 86 92 93
expressionStatement  : 13
forStatement         : 17
functionDeclaration  : 61
ifStatement          : 15
localDeclaration     : 87 88
localDeclarations    : 6 87
optionalElseStatement : 92
optionalExpression   : 64 64 64
optionalLocalDeclarations : 2
optionalStatementList : 2
parameter            : 84 85
parameterList        : 8 84
parameters           : 1
pointer              : 79 82
program              : 0
returnStatement      : 18
statement            : 11 12 64 86 90 92
statementList        : 3 11
staticVariableDeclaration : 60 62 63 89
staticVariableDeclarationList : 62 73
structSpecifier      : 72
typeSpec             : 1 75 76 83
whileStatement       : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (10) program -> . declarationList
    (58) declarationList -> . declarationList declaration
    (59) declarationList -> . declaration
    (60) declaration -> . staticVariableDeclaration
    (61) declaration -> . functionDeclaration
    (75) staticVariableDeclaration -> . typeSpec declaratorList SEMICOLON
    (76) staticVariableDeclaration -> . typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON
    (1) functionDeclaration -> . typeSpec ID LPAREN parameters RPAREN compoundStatement
    (68) typeSpec -> . VOID
    (69) typeSpec -> . INT
    (70) typeSpec -> . FLOAT
    (71) typeSpec -> . CHAR
    (72) typeSpec -> . structSpecifier
    (73) structSpecifier -> . STRUCT ID LCURLY staticVariableDeclarationList RCURLY
    (74) structSpecifier -> . STRUCT ID

    VOID            shift and go to state 1
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 2
    STRUCT          shift and go to state 10

    functionDeclaration            shift and go to state 7
    declarationList                shift and go to state 6
    program                        shift and go to state 4
    structSpecifier                shift and go to state 5
    declaration                    shift and go to state 8
    typeSpec                       shift and go to state 9
    staticVariableDeclaration      shift and go to state 3

state 1

    (68) typeSpec -> VOID .

    ID              reduce using rule 68 (typeSpec -> VOID .)
    TIMES           reduce using rule 68 (typeSpec -> VOID .)


state 2

    (71) typeSpec -> CHAR .

    ID              reduce using rule 71 (typeSpec -> CHAR .)
    TIMES           reduce using rule 71 (typeSpec -> CHAR .)


state 3

    (60) declaration -> staticVariableDeclaration .

    VOID            reduce using rule 60 (declaration -> staticVariableDeclaration .)
    INT             reduce using rule 60 (declaration -> staticVariableDeclaration .)
    FLOAT           reduce using rule 60 (declaration -> staticVariableDeclaration .)
    CHAR            reduce using rule 60 (declaration -> staticVariableDeclaration .)
    STRUCT          reduce using rule 60 (declaration -> staticVariableDeclaration .)
    $end            reduce using rule 60 (declaration -> staticVariableDeclaration .)


state 4

    (0) S' -> program .



state 5

    (72) typeSpec -> structSpecifier .

    ID              reduce using rule 72 (typeSpec -> structSpecifier .)
    TIMES           reduce using rule 72 (typeSpec -> structSpecifier .)


state 6

    (10) program -> declarationList .
    (58) declarationList -> declarationList . declaration
    (60) declaration -> . staticVariableDeclaration
    (61) declaration -> . functionDeclaration
    (75) staticVariableDeclaration -> . typeSpec declaratorList SEMICOLON
    (76) staticVariableDeclaration -> . typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON
    (1) functionDeclaration -> . typeSpec ID LPAREN parameters RPAREN compoundStatement
    (68) typeSpec -> . VOID
    (69) typeSpec -> . INT
    (70) typeSpec -> . FLOAT
    (71) typeSpec -> . CHAR
    (72) typeSpec -> . structSpecifier
    (73) structSpecifier -> . STRUCT ID LCURLY staticVariableDeclarationList RCURLY
    (74) structSpecifier -> . STRUCT ID

    $end            reduce using rule 10 (program -> declarationList .)
    VOID            shift and go to state 1
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 2
    STRUCT          shift and go to state 10

    functionDeclaration            shift and go to state 7
    structSpecifier                shift and go to state 5
    declaration                    shift and go to state 13
    typeSpec                       shift and go to state 9
    staticVariableDeclaration      shift and go to state 3

state 7

    (61) declaration -> functionDeclaration .

    VOID            reduce using rule 61 (declaration -> functionDeclaration .)
    INT             reduce using rule 61 (declaration -> functionDeclaration .)
    FLOAT           reduce using rule 61 (declaration -> functionDeclaration .)
    CHAR            reduce using rule 61 (declaration -> functionDeclaration .)
    STRUCT          reduce using rule 61 (declaration -> functionDeclaration .)
    $end            reduce using rule 61 (declaration -> functionDeclaration .)


state 8

    (59) declarationList -> declaration .

    VOID            reduce using rule 59 (declarationList -> declaration .)
    INT             reduce using rule 59 (declarationList -> declaration .)
    FLOAT           reduce using rule 59 (declarationList -> declaration .)
    CHAR            reduce using rule 59 (declarationList -> declaration .)
    STRUCT          reduce using rule 59 (declarationList -> declaration .)
    $end            reduce using rule 59 (declarationList -> declaration .)


state 9

    (75) staticVariableDeclaration -> typeSpec . declaratorList SEMICOLON
    (76) staticVariableDeclaration -> typeSpec . declarator LSQUARE INTLITERAL RSQUARE SEMICOLON
    (1) functionDeclaration -> typeSpec . ID LPAREN parameters RPAREN compoundStatement
    (77) declaratorList -> . declaratorList COMMA declarator
    (78) declaratorList -> . declarator
    (79) declarator -> . pointer ID
    (80) declarator -> . ID
    (81) pointer -> . TIMES
    (82) pointer -> . TIMES pointer

    ID              shift and go to state 18
    TIMES           shift and go to state 15

    declaratorList                 shift and go to state 14
    declarator                     shift and go to state 16
    pointer                        shift and go to state 17

state 10

    (73) structSpecifier -> STRUCT . ID LCURLY staticVariableDeclarationList RCURLY
    (74) structSpecifier -> STRUCT . ID

    ID              shift and go to state 19


state 11

    (69) typeSpec -> INT .

    ID              reduce using rule 69 (typeSpec -> INT .)
    TIMES           reduce using rule 69 (typeSpec -> INT .)


state 12

    (70) typeSpec -> FLOAT .

    ID              reduce using rule 70 (typeSpec -> FLOAT .)
    TIMES           reduce using rule 70 (typeSpec -> FLOAT .)


state 13

    (58) declarationList -> declarationList declaration .

    VOID            reduce using rule 58 (declarationList -> declarationList declaration .)
    INT             reduce using rule 58 (declarationList -> declarationList declaration .)
    FLOAT           reduce using rule 58 (declarationList -> declarationList declaration .)
    CHAR            reduce using rule 58 (declarationList -> declarationList declaration .)
    STRUCT          reduce using rule 58 (declarationList -> declarationList declaration .)
    $end            reduce using rule 58 (declarationList -> declarationList declaration .)


state 14

    (75) staticVariableDeclaration -> typeSpec declaratorList . SEMICOLON
    (77) declaratorList -> declaratorList . COMMA declarator

    SEMICOLON       shift and go to state 21
    COMMA           shift and go to state 20


state 15

    (81) pointer -> TIMES .
    (82) pointer -> TIMES . pointer
    (81) pointer -> . TIMES
    (82) pointer -> . TIMES pointer

    ID              reduce using rule 81 (pointer -> TIMES .)
    TIMES           shift and go to state 15

    pointer                        shift and go to state 22

state 16

    (76) staticVariableDeclaration -> typeSpec declarator . LSQUARE INTLITERAL RSQUARE SEMICOLON
    (78) declaratorList -> declarator .

    LSQUARE         shift and go to state 23
    SEMICOLON       reduce using rule 78 (declaratorList -> declarator .)
    COMMA           reduce using rule 78 (declaratorList -> declarator .)


state 17

    (79) declarator -> pointer . ID

    ID              shift and go to state 24


state 18

    (1) functionDeclaration -> typeSpec ID . LPAREN parameters RPAREN compoundStatement
    (80) declarator -> ID .

    LPAREN          shift and go to state 25
    LSQUARE         reduce using rule 80 (declarator -> ID .)
    SEMICOLON       reduce using rule 80 (declarator -> ID .)
    COMMA           reduce using rule 80 (declarator -> ID .)


state 19

    (73) structSpecifier -> STRUCT ID . LCURLY staticVariableDeclarationList RCURLY
    (74) structSpecifier -> STRUCT ID .

    LCURLY          shift and go to state 26
    ID              reduce using rule 74 (structSpecifier -> STRUCT ID .)
    TIMES           reduce using rule 74 (structSpecifier -> STRUCT ID .)


state 20

    (77) declaratorList -> declaratorList COMMA . declarator
    (79) declarator -> . pointer ID
    (80) declarator -> . ID
    (81) pointer -> . TIMES
    (82) pointer -> . TIMES pointer

    ID              shift and go to state 28
    TIMES           shift and go to state 15

    pointer                        shift and go to state 17
    declarator                     shift and go to state 27

state 21

    (75) staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .

    VOID            reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    INT             reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    FLOAT           reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    CHAR            reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    STRUCT          reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    $end            reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    RCURLY          reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    SEMICOLON       reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    LCURLY          reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    IF              reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    WHILE           reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    FOR             reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    RETURN          reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    BREAK           reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    CONTINUE        reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    ADDR            reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    TIMES           reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    ID              reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    INTLITERAL      reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    FLOATLITERAL    reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    LPAREN          reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    MINUS           reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)
    EXCLAMATION     reduce using rule 75 (staticVariableDeclaration -> typeSpec declaratorList SEMICOLON .)


state 22

    (82) pointer -> TIMES pointer .

    ID              reduce using rule 82 (pointer -> TIMES pointer .)


state 23

    (76) staticVariableDeclaration -> typeSpec declarator LSQUARE . INTLITERAL RSQUARE SEMICOLON

    INTLITERAL      shift and go to state 29


state 24

    (79) declarator -> pointer ID .

    SEMICOLON       reduce using rule 79 (declarator -> pointer ID .)
    COMMA           reduce using rule 79 (declarator -> pointer ID .)
    LSQUARE         reduce using rule 79 (declarator -> pointer ID .)


state 25

    (1) functionDeclaration -> typeSpec ID LPAREN . parameters RPAREN compoundStatement
    (8) parameters -> . parameterList
    (9) parameters -> . VOID
    (84) parameterList -> . parameterList COMMA parameter
    (85) parameterList -> . parameter
    (83) parameter -> . typeSpec ID
    (68) typeSpec -> . VOID
    (69) typeSpec -> . INT
    (70) typeSpec -> . FLOAT
    (71) typeSpec -> . CHAR
    (72) typeSpec -> . structSpecifier
    (73) structSpecifier -> . STRUCT ID LCURLY staticVariableDeclarationList RCURLY
    (74) structSpecifier -> . STRUCT ID

    VOID            shift and go to state 31
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 2
    STRUCT          shift and go to state 10

    parameters                     shift and go to state 30
    parameterList                  shift and go to state 32
    structSpecifier                shift and go to state 5
    typeSpec                       shift and go to state 33
    parameter                      shift and go to state 34

state 26

    (73) structSpecifier -> STRUCT ID LCURLY . staticVariableDeclarationList RCURLY
    (62) staticVariableDeclarationList -> . staticVariableDeclarationList staticVariableDeclaration
    (63) staticVariableDeclarationList -> . staticVariableDeclaration
    (75) staticVariableDeclaration -> . typeSpec declaratorList SEMICOLON
    (76) staticVariableDeclaration -> . typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON
    (68) typeSpec -> . VOID
    (69) typeSpec -> . INT
    (70) typeSpec -> . FLOAT
    (71) typeSpec -> . CHAR
    (72) typeSpec -> . structSpecifier
    (73) structSpecifier -> . STRUCT ID LCURLY staticVariableDeclarationList RCURLY
    (74) structSpecifier -> . STRUCT ID

    VOID            shift and go to state 1
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 2
    STRUCT          shift and go to state 10

    structSpecifier                shift and go to state 5
    typeSpec                       shift and go to state 36
    staticVariableDeclarationList  shift and go to state 35
    staticVariableDeclaration      shift and go to state 37

state 27

    (77) declaratorList -> declaratorList COMMA declarator .

    SEMICOLON       reduce using rule 77 (declaratorList -> declaratorList COMMA declarator .)
    COMMA           reduce using rule 77 (declaratorList -> declaratorList COMMA declarator .)


state 28

    (80) declarator -> ID .

    SEMICOLON       reduce using rule 80 (declarator -> ID .)
    COMMA           reduce using rule 80 (declarator -> ID .)
    LSQUARE         reduce using rule 80 (declarator -> ID .)


state 29

    (76) staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL . RSQUARE SEMICOLON

    RSQUARE         shift and go to state 38


state 30

    (1) functionDeclaration -> typeSpec ID LPAREN parameters . RPAREN compoundStatement

    RPAREN          shift and go to state 39


state 31

    (9) parameters -> VOID .
    (68) typeSpec -> VOID .

    RPAREN          reduce using rule 9 (parameters -> VOID .)
    ID              reduce using rule 68 (typeSpec -> VOID .)


state 32

    (8) parameters -> parameterList .
    (84) parameterList -> parameterList . COMMA parameter

    RPAREN          reduce using rule 8 (parameters -> parameterList .)
    COMMA           shift and go to state 40


state 33

    (83) parameter -> typeSpec . ID

    ID              shift and go to state 41


state 34

    (85) parameterList -> parameter .

    COMMA           reduce using rule 85 (parameterList -> parameter .)
    RPAREN          reduce using rule 85 (parameterList -> parameter .)


state 35

    (73) structSpecifier -> STRUCT ID LCURLY staticVariableDeclarationList . RCURLY
    (62) staticVariableDeclarationList -> staticVariableDeclarationList . staticVariableDeclaration
    (75) staticVariableDeclaration -> . typeSpec declaratorList SEMICOLON
    (76) staticVariableDeclaration -> . typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON
    (68) typeSpec -> . VOID
    (69) typeSpec -> . INT
    (70) typeSpec -> . FLOAT
    (71) typeSpec -> . CHAR
    (72) typeSpec -> . structSpecifier
    (73) structSpecifier -> . STRUCT ID LCURLY staticVariableDeclarationList RCURLY
    (74) structSpecifier -> . STRUCT ID

    RCURLY          shift and go to state 42
    VOID            shift and go to state 1
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 2
    STRUCT          shift and go to state 10

    structSpecifier                shift and go to state 5
    typeSpec                       shift and go to state 36
    staticVariableDeclaration      shift and go to state 43

state 36

    (75) staticVariableDeclaration -> typeSpec . declaratorList SEMICOLON
    (76) staticVariableDeclaration -> typeSpec . declarator LSQUARE INTLITERAL RSQUARE SEMICOLON
    (77) declaratorList -> . declaratorList COMMA declarator
    (78) declaratorList -> . declarator
    (79) declarator -> . pointer ID
    (80) declarator -> . ID
    (81) pointer -> . TIMES
    (82) pointer -> . TIMES pointer

    ID              shift and go to state 28
    TIMES           shift and go to state 15

    declaratorList                 shift and go to state 14
    pointer                        shift and go to state 17
    declarator                     shift and go to state 16

state 37

    (63) staticVariableDeclarationList -> staticVariableDeclaration .

    RCURLY          reduce using rule 63 (staticVariableDeclarationList -> staticVariableDeclaration .)
    VOID            reduce using rule 63 (staticVariableDeclarationList -> staticVariableDeclaration .)
    INT             reduce using rule 63 (staticVariableDeclarationList -> staticVariableDeclaration .)
    FLOAT           reduce using rule 63 (staticVariableDeclarationList -> staticVariableDeclaration .)
    CHAR            reduce using rule 63 (staticVariableDeclarationList -> staticVariableDeclaration .)
    STRUCT          reduce using rule 63 (staticVariableDeclarationList -> staticVariableDeclaration .)


state 38

    (76) staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE . SEMICOLON

    SEMICOLON       shift and go to state 44


state 39

    (1) functionDeclaration -> typeSpec ID LPAREN parameters RPAREN . compoundStatement
    (2) compoundStatement -> . LCURLY optionalLocalDeclarations optionalStatementList RCURLY

    LCURLY          shift and go to state 46

    compoundStatement              shift and go to state 45

state 40

    (84) parameterList -> parameterList COMMA . parameter
    (83) parameter -> . typeSpec ID
    (68) typeSpec -> . VOID
    (69) typeSpec -> . INT
    (70) typeSpec -> . FLOAT
    (71) typeSpec -> . CHAR
    (72) typeSpec -> . structSpecifier
    (73) structSpecifier -> . STRUCT ID LCURLY staticVariableDeclarationList RCURLY
    (74) structSpecifier -> . STRUCT ID

    VOID            shift and go to state 1
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 2
    STRUCT          shift and go to state 10

    typeSpec                       shift and go to state 33
    parameter                      shift and go to state 47
    structSpecifier                shift and go to state 5

state 41

    (83) parameter -> typeSpec ID .

    COMMA           reduce using rule 83 (parameter -> typeSpec ID .)
    RPAREN          reduce using rule 83 (parameter -> typeSpec ID .)


state 42

    (73) structSpecifier -> STRUCT ID LCURLY staticVariableDeclarationList RCURLY .

    ID              reduce using rule 73 (structSpecifier -> STRUCT ID LCURLY staticVariableDeclarationList RCURLY .)
    TIMES           reduce using rule 73 (structSpecifier -> STRUCT ID LCURLY staticVariableDeclarationList RCURLY .)


state 43

    (62) staticVariableDeclarationList -> staticVariableDeclarationList staticVariableDeclaration .

    RCURLY          reduce using rule 62 (staticVariableDeclarationList -> staticVariableDeclarationList staticVariableDeclaration .)
    VOID            reduce using rule 62 (staticVariableDeclarationList -> staticVariableDeclarationList staticVariableDeclaration .)
    INT             reduce using rule 62 (staticVariableDeclarationList -> staticVariableDeclarationList staticVariableDeclaration .)
    FLOAT           reduce using rule 62 (staticVariableDeclarationList -> staticVariableDeclarationList staticVariableDeclaration .)
    CHAR            reduce using rule 62 (staticVariableDeclarationList -> staticVariableDeclarationList staticVariableDeclaration .)
    STRUCT          reduce using rule 62 (staticVariableDeclarationList -> staticVariableDeclarationList staticVariableDeclaration .)


state 44

    (76) staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .

    VOID            reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    INT             reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    FLOAT           reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    CHAR            reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    STRUCT          reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    $end            reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    RCURLY          reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    SEMICOLON       reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    LCURLY          reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    IF              reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    WHILE           reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    FOR             reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    RETURN          reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    BREAK           reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    CONTINUE        reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    ADDR            reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    TIMES           reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    ID              reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    INTLITERAL      reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    FLOATLITERAL    reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    LPAREN          reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    MINUS           reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)
    EXCLAMATION     reduce using rule 76 (staticVariableDeclaration -> typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON .)


state 45

    (1) functionDeclaration -> typeSpec ID LPAREN parameters RPAREN compoundStatement .

    VOID            reduce using rule 1 (functionDeclaration -> typeSpec ID LPAREN parameters RPAREN compoundStatement .)
    INT             reduce using rule 1 (functionDeclaration -> typeSpec ID LPAREN parameters RPAREN compoundStatement .)
    FLOAT           reduce using rule 1 (functionDeclaration -> typeSpec ID LPAREN parameters RPAREN compoundStatement .)
    CHAR            reduce using rule 1 (functionDeclaration -> typeSpec ID LPAREN parameters RPAREN compoundStatement .)
    STRUCT          reduce using rule 1 (functionDeclaration -> typeSpec ID LPAREN parameters RPAREN compoundStatement .)
    $end            reduce using rule 1 (functionDeclaration -> typeSpec ID LPAREN parameters RPAREN compoundStatement .)


state 46

    (2) compoundStatement -> LCURLY . optionalLocalDeclarations optionalStatementList RCURLY
    (6) optionalLocalDeclarations -> . localDeclarations
    (7) optionalLocalDeclarations -> . empty
    (87) localDeclarations -> . localDeclarations localDeclaration
    (88) localDeclarations -> . localDeclaration
    (5) empty -> .
    (89) localDeclaration -> . staticVariableDeclaration
    (75) staticVariableDeclaration -> . typeSpec declaratorList SEMICOLON
    (76) staticVariableDeclaration -> . typeSpec declarator LSQUARE INTLITERAL RSQUARE SEMICOLON
    (68) typeSpec -> . VOID
    (69) typeSpec -> . INT
    (70) typeSpec -> . FLOAT
    (71) typeSpec -> . CHAR
    (72) typeSpec -> . structSpecifier
    (73) structSpecifier -> . STRUCT ID LCURLY staticVariableDeclarationList RCURLY
    (74) structSpecifier -> . STRUCT ID

    SEMICOLON       reduce using rule 5 (empty -> .)
    LCURLY          reduce using rule 5 (empty -> .)
    IF              reduce using rule 5 (empty -> .)
    WHILE           reduce using rule 5 (empty -> .)
    FOR             reduce using rule 5 (empty -> .)
    RETURN          reduce using rule 5 (empty -> .)
    BREAK           reduce using rule 5 (empty -> .)
    CONTINUE        reduce using rule 5 (empty -> .)
    ADDR            reduce using rule 5 (empty -> .)
    TIMES           reduce using rule 5 (empty -> .)
    ID              reduce using rule 5 (empty -> .)
    INTLITERAL      reduce using rule 5 (empty -> .)
    FLOATLITERAL    reduce using rule 5 (empty -> .)
    LPAREN          reduce using rule 5 (empty -> .)
    MINUS           reduce using rule 5 (empty -> .)
    EXCLAMATION     reduce using rule 5 (empty -> .)
    RCURLY          reduce using rule 5 (empty -> .)
    VOID            shift and go to state 1
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 2
    STRUCT          shift and go to state 10
